feat: migrate demos to Java 8 baseline